--- a/index.html
+++ b/index.html
@@ -8080,9 +8080,9 @@
                       <h3 class="author">Tom Cooper</h3>
                     </div>
                     <h4>Ukraine War, 23 October 2022</h4>
-                    <p>
+                    <p class="trending-date">
                       <span> Oct 23 </span>
-                      <span> &middot; </span>
+                      <span class="dot"> &middot; </span>
                       <span> 5 min read </span>
                     </p>
                   </div>
@@ -8095,9 +8095,9 @@
                       <h3 class="author">Arthur Hayes in Entrepreneur's Handbook</h3>
                     </div>
                     <h4>Comeback</h4>
-                    <p>
+                    <p class="trending-date">
                       <span> Oct 26 </span>
-                      <span> &middot; </span>
+                      <span class="dot"> &middot; </span>
                       <span> 24 min read </span>
                     </p>
                   </div>
@@ -8110,9 +8110,9 @@
                       <h3 class="author">Tom Cooper</h3>
                     </div>
                     <h4>How I Learned to Love My Breasts Even Though One Is A Horcrux For Voldemort</h4>
-                    <p>
+                    <p class="trending-date">
                       <span> Oct 26 </span>
-                      <span> &middot; </span>
+                      <span class="dot"> &middot; </span>
                       <span> 2 min read </span>
                     </p>
                   </div>
@@ -8125,11 +8125,11 @@
                       <h3 class="author">Frank Mastropolo in The Riffk</h3>
                     </div>
                     <h4>The Night Paul McCartney Donned a Disguise at Fillmore East</h4>
-                    <p>
+                    <p class="trending-date">
                       <span> Oct 22 </span>
-                      <span> &middot; </span>
+                      <span class="dot"> &middot; </span>
                       <span> 3 min read </span>
-                      <span>
+                      <span class="star">
                         <img src="./assets/imgs/svg/star.svg" alt="" />
                       </span>
                     </p>
@@ -8143,11 +8143,11 @@
                       <h3 class="author">Frank Andrade in Towards Data Science</h3>
                     </div>
                     <h4>5 Python Projects to Automate Your Life: From Beginner to Advanced</h4>
-                    <p>
+                    <p class="trending-date">
                       <span> Oct 13 </span>
-                      <span> &middot; </span>
+                      <span class="dot"> &middot; </span>
                       <span> 6 min read </span>
-                      <span>
+                      <span class="star">
                         <img src="./assets/imgs/svg/star.svg" alt="" />
                       </span>
                     </p>
@@ -8161,11 +8161,11 @@
                       <h3 class="author">Wesley Smits in JavaScript in Plain English</h3>
                     </div>
                     <h4>How To Make Visual Studio Code Look Amazing</h4>
-                    <p>
+                    <p class="trending-date">
                       <span> Oct 20 </span>
-                      <span> &middot; </span>
+                      <span class="dot"> &middot; </span>
                       <span> 7 min read </span>
-                      <span>
+                      <span class="star">
                         <img src="./assets/imgs/svg/star.svg" alt="" />
                       </span>
                     </p>
@@ -8200,7 +8200,7 @@
                               <span> 5 min read </span>
                               <span class="dot"> &middot; </span>
                               <span class="tag"> Aging </span>
-                              <span>
+                              <span class="star">
                                 <img src="./assets/imgs/svg/star.svg" alt="" />
                               </span>
                             </div>
@@ -8232,7 +8232,7 @@
                               <span> 6 min read </span>
                               <span class="dot"> &middot; </span>
                               <span class="tag"> Health </span>
-                              <span>
+                              <span class="star">
                                 <img src="./assets/imgs/svg/star.svg" alt="" />
                               </span>
                             </div>
@@ -8267,7 +8267,7 @@
                               <span> 5 min read </span>
                               <span class="dot"> &middot; </span>
                               <span class="tag"> Software Engineering </span>
-                              <span>
+                              <span class="star">
                                 <img src="./assets/imgs/svg/star.svg" alt="" />
                               </span>
                             </div>
@@ -8299,9 +8299,6 @@
                               <span> 11 min read </span>
                               <span class="dot"> &middot; </span>
                               <span class="tag"> Sustainability </span>
-                              <span>
-                                <img src="./assets/imgs/svg/star.svg" alt="" />
-                              </span>
                             </div>
                             <div>
                               <img src="./assets/imgs/svg/bookmark.svg" alt="Preferiti" />
@@ -8334,7 +8331,7 @@
                               <span> 7 min read </span>
                               <span class="dot"> &middot; </span>
                               <span class="tag"> Health </span>
-                              <span>
+                              <span class="star">
                                 <img src="./assets/imgs/svg/star.svg" alt="" />
                               </span>
                             </div>
@@ -8366,7 +8363,7 @@
                               <span> 6 min read </span>
                               <span class="dot"> &middot; </span>
                               <span class="tag"> Experiences </span>
-                              <span>
+                              <span class="star">
                                 <img src="./assets/imgs/svg/star.svg" alt="" />
                               </span>
                             </div>
@@ -8401,9 +8398,6 @@
                               <span> 6 min read </span>
                               <span class="dot"> &middot; </span>
                               <span class="tag"> Health </span>
-                              <span>
-                                <img src="./assets/imgs/svg/star.svg" alt="" />
-                              </span>
                             </div>
                             <div>
                               <img src="./assets/imgs/svg/bookmark.svg" alt="Preferiti" />
