--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div>
       <div>
-        <div>
+        <div id="fixed-header">
           <div class="header">
             <header>
               <img src="./assets/imgs/svg/logo.svg" alt="Logo Medium" />
