--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <div id="hero-title">
                 <h1>Stay curious.</h1>
                 <p>Discover stories, thinking, and expertise from writers on any topic.</p>
-                <button>Start reading</button>
+                <button id="scroll-anchor">Start reading</button>
               </div>
               <!-- ARTWORK con "M" ripetute -->
               <div id="hero-svg">
@@ -8445,5 +8445,6 @@
         </main>
       </div>
     </div>
+    <script src="./script.js"></script>
   </body>
 </html>
